[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n8n-video-processor"
version = "1.0.0"
description = "Video processing webhook for n8n workflows"
dependencies = [
    "Flask>=2.3.3",
    "Werkzeug>=2.3.7",
    "requests>=2.31.0",
    "gunicorn>=21.2.0",
    "ffmpeg-python>=0.2.0",
]
]

[project.scripts]
app = "app:app"
